# ic-adc

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  vite.config.js
.config/: orchestrator.yaml
.husky/: pre-commit
.prover/: prover.Dockerfile
.prover/config/: prover.yaml
example_caller/: Cargo.toml  README.md  biome.json  canister_ids.json  dfx.json  package.json  vite.config.js
example_caller/__tests__/: actor.ts  identity.ts  test_adc.test.ts
example_caller/src/: lib.rs
example_caller/src/adc_caller/: Cargo.toml  adc_caller.did
example_caller/src/adc_caller/src/: lib.rs  state.rs  types.rs
example_caller/src/adc_pulse/: Cargo.toml
example_caller/src/adc_pulse/src/: cli.rs  main.rs
orchestrator/: .env.sample  Cargo.toml  identity.pem
orchestrator/.config/: orchestrator.yaml
orchestrator/src/: config.rs  main.rs
orchestrator/src/handlers/: mod.rs  price.rs
orchestrator/src/handlers/price/: mod.rs  poller.rs  traits.rs  types.rs  utils.rs
orchestrator/src/handlers/price/sources/: mod.rs  pyth.rs  redstone.rs
orchestrator/src/handlers/url/: mod.rs
orchestrator/src/helpers/: cron.rs  mod.rs  utils.rs  verity.rs
orchestrator/src/helpers/logs/: errors.rs  ic.rs  mod.rs  types.rs
orchestrator/src/helpers/proof/: mod.rs
orchestrator/src/triggers/: cron.rs  mod.rs
orchestrator/src/utils/: cron.rs
processor/ic/: Cargo.toml  README.md  adc.did  canister_ids.json  dfx.json  processor.did
processor/ic/scripts/: deploy.sh
processor/ic/src/: lib.rs  state.rs  types.rs  utils.rs
processor/ic/src/sources/: mod.rs  pyth.rs  redstone.rs
processor/ic/tests/: integration.sh
types/: Cargo.toml
types/src/: lib.rs
