[workspace]
members = ["orchestrator", "processor/ic", "types"]
resolver = "2"

[workspace.dependencies]
verity-client = { git = "https://github.com/usherlabs/verity-dp.git", branch = "feature/better-workspaces" }
verity-dp-ic = { git = "https://github.com/usherlabs/verity-dp.git", branch = "feature/better-workspaces" }
