[workspace]
members = [
  "orchestrator",
  "processor/ic",
  "types",
  "example_caller/src/adc_caller",
  "example_caller/src/adc_pulse",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Usher Labs <labs@usher.so>"]
repository = "https://github.com/usherlabs/ic-adc"
homepage = "https://www.usher.so/"
documentation = "https://www.usher.so/"
edition = "2021"
license = "LGPL-3.0"

[workspace.dependencies]
anyhow = "1.0.94"
candid = "0.10.10"
chrono = "0.4.38"
clap = "4.5.22"
dotenv = "0.15.0"
hex = "0.4.3"
ic-agent = { git = "https://github.com/dfinity/agent-rs.git", rev = "60a64dd2d5368180f03a75df80f475d6e2caf21a" }
ic-cdk = "0.17.0"
ic-utils = { git = "https://github.com/dfinity/agent-rs.git", rev = "60a64dd2d5368180f03a75df80f475d6e2caf21a" }
rand = "0.8.5"
reqwest = "0.12.9"
serde = "1.0.215"
serde_json = "1.0.133"
thiserror = "1.0.69"
time = "0.3.37"
tokio = "1.39.2"
tokio-cron-scheduler = "0.13.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
types = { path = "./types" }
verity-ic = { version = "0.2" }
verity-client = { version = "0.2"}
