[package]
name = "orchestrator"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.86"
candid = "0.10.4"
candid_parser = "0.1.4"
chrono = "0.4"
dotenv = "0.15.0"
eyre = "0.6"
hex = { version = "0.4.3", features = ["serde"] }
ic-agent = { git = "https://github.com/dfinity/agent-rs.git", rev = "60a64dd2d5368180f03a75df80f475d6e2caf21a" }
ic-cdk = "0.13.1"
ic-identity-hsm = { git = "https://github.com/dfinity/agent-rs.git", rev = "60a64dd2d5368180f03a75df80f475d6e2caf21a" }
ic-utils = { git = "https://github.com/dfinity/agent-rs.git", rev = "60a64dd2d5368180f03a75df80f475d6e2caf21a" }
reqwest = "0.12.5"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0.63"
time = { version = "0.3.9", features = [
    "serde",
    "macros",
    "serde-human-readable",
] }
tokio = { version = "1.39.2", features = ["full"] }
tokio-cron-scheduler = "0.10.2"
tracing = "0.1"
tracing-subscriber = "0.3"
types = { path = "../types" }
uuid = "1.10.0"
verity-dp-ic = { workspace = true }
verity-client = { workspace = true }
