[package]
name = "adc"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-timers = "0.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
hex = "0.4.3"
verity-dp-ic = { workspace = true }
anyhow = "1.0.93"
types = { path = "../../types" }
