[package]
name = "adc"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
hex = { workspace = true }
ic-cdk = { workspace = true }
serde_json = { workspace = true }
types = { workspace = true }
verity-dp-ic = { workspace = true }
