[package]
name = "adc_caller"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
verity-ic = { workspace = true }