[package]
name = "adc_pulse"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
ic-agent = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tokio-cron-scheduler = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
